--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <div class="sec-space-left-right">
             <div class="row m-0">
                 <div class="col-lg-6">
-                    <h4 class="sec-you-h">Proudly Serving Ocala & 
-                        Marion County for Over 
+                    <h4 class="sec-you-h">Proudly Serving Ocala &
+                        Marion County for Over
                         23 Years.</h4>
                     <p class="sec-amet-p">Amet minim mollit non deserunt ullamco sit aliqua dolor do consequat sunt
                         nostrud amet. Amet
@@ -237,28 +237,37 @@
         <div class="sec-space-left-right">
             <h4 class="sec-gall-main-n">We'll Restore Your Property<br>
                 In Just One Day</h4>
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="img-comp-container">
-                        <div class="img-comp-img">
-                            <img class="sec-a-b-img" src="images/slid-1.jpg">
-                        </div>
-                        <div class="img-comp-img img-comp-overlay">
-                            <img class="sec-a-b-img" src="images/slid-2.jpg">
-                        </div>
+            <div class="row m-0">
+                <div class="col-lg-4 pb-4">
+                    <div id="comparison">
+                        <figure>
+                            <div id="handle"></div>
+                            <div id="divisor"></div>
+                        </figure>
+                        <input type="range" min="0" max="100" value="50" id="slider" oninput="moveDivisor()">
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <div class="img-comp-container">
-                        <div class="img-comp-img">
-                            <img class="sec-a-b-img" src="images/slid-1.jpg">
-                        </div>
-                        <div class="img-comp-img img-comp-overlay">
-                            <img class="sec-a-b-img" src="images/slid-2.jpg">
-                        </div>
+                <div class="col-lg-4 pb-4">
+                    <div id="comparison">
+                        <figure>
+                            <div id="han2"></div>
+                            <div id="div2"></div>
+                        </figure>
+                        <input type="range" min="0" max="100" value="50" id="slider2" oninput="moveDiv2()">
+                    </div>
+                </div>
+                <div class="col-lg-4 pb-4">
+                    <div id="comparison">
+                        <figure>
+                            <div id="han3"></div>
+                            <div id="div3"></div>
+                        </figure>
+                        <input type="range" min="0" max="100" value="50" id="slider3" oninput="moveDiv3()">
                     </div>
                 </div>
             </div>
+
+
 
         </div>
     </div>
@@ -273,7 +282,7 @@
                 <img class="img-fluid imgstyle" src="images/man.png" alt="">
             </div>
             <div class="col-lg-6">
-                
+
                 <p class="sec-hellop-p">Hello</p>
                 <h4 class="sec-man-hh">I’m Jerry</h4>
                 <p class="sec-maan-pp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
@@ -461,7 +470,7 @@
                         </div>
                     </div>
                 </div>
-                
+
 
             </div>
 
@@ -553,199 +562,47 @@
                 }
             }
         })
-    </script>
 
-    <script>
-        function initComparisons() {
-            var x, i;
-            /*find all elements with an "overlay" class:*/
-            x = document.getElementsByClassName("img-comp-overlay");
-            for (i = 0; i < x.length; i++) {
-                /*once for each "overlay" element:
-                pass the "overlay" element as a parameter when executing the compareImages function:*/
-                compareImages(x[i]);
-            }
-            function compareImages(img) {
-                var slider, img, clicked = 0, w, h;
-                /*get the width and height of the img element*/
-                w = img.offsetWidth;
-                h = img.offsetHeight;
-                /*set the width of the img element to 50%:*/
-                img.style.width = (w / 2) + "px";
-                /*create slider:*/
-                slider = document.createElement("DIV");
-                slider.setAttribute("class", "img-comp-slider");
-                /*insert slider*/
-                img.parentElement.insertBefore(slider, img);
-                /*position the slider in the middle:*/
-                slider.style.top = (h / 2) - (slider.offsetHeight / 2) + "px";
-                slider.style.left = (w / 2) - (slider.offsetWidth / 2) + "px";
-                /*execute a function when the mouse button is pressed:*/
-                slider.addEventListener("mousedown", slideReady);
-                /*and another function when the mouse button is released:*/
-                window.addEventListener("mouseup", slideFinish);
-                /*or touched (for touch screens:*/
-                slider.addEventListener("touchstart", slideReady);
-                /*and released (for touch screens:*/
-                window.addEventListener("touchend", slideFinish);
-                function slideReady(e) {
-                    /*prevent any other actions that may occur when moving over the image:*/
-                    e.preventDefault();
-                    /*the slider is now clicked and ready to move:*/
-                    clicked = 1;
-                    /*execute a function when the slider is moved:*/
-                    window.addEventListener("mousemove", slideMove);
-                    window.addEventListener("touchmove", slideMove);
-                }
-                function slideFinish() {
-                    /*the slider is no longer clicked:*/
-                    clicked = 0;
-                }
-                function slideMove(e) {
-                    var pos;
-                    /*if the slider is no longer clicked, exit this function:*/
-                    if (clicked == 0) return false;
-                    /*get the cursor's x position:*/
-                    pos = getCursorPos(e)
-                    /*prevent the slider from being positioned outside the image:*/
-                    if (pos < 0) pos = 0;
-                    if (pos > w) pos = w;
-                    /*execute a function that will resize the overlay image according to the cursor:*/
-                    slide(pos);
-                }
-                function getCursorPos(e) {
-                    var a, x = 0;
-                    e = (e.changedTouches) ? e.changedTouches[0] : e;
-                    /*get the x positions of the image:*/
-                    a = img.getBoundingClientRect();
-                    /*calculate the cursor's x coordinate, relative to the image:*/
-                    x = e.pageX - a.left;
-                    /*consider any page scrolling:*/
-                    x = x - window.pageXOffset;
-                    return x;
-                }
-                function slide(x) {
-                    /*resize the image:*/
-                    img.style.width = x + "px";
-                    /*position the slider:*/
-                    slider.style.left = img.offsetWidth - (slider.offsetWidth / 2) + "px";
-                }
-            }
+        var div3 = document.getElementById("div3"),
+            han3 = document.getElementById("han3"),
+            slider3 = document.getElementById("slider3");
+
+        function moveDiv3() {
+            han3.style.left = slider3.value + "%";
+            div3.style.width = slider3.value + "%";
         }
+
+        window.onload = function () {
+            moveDiv3();
+        };
+
+        var div2 = document.getElementById("div2"),
+            han2 = document.getElementById("han2"),
+            slider2 = document.getElementById("slider2");
+
+        function moveDiv2() {
+            han2.style.left = slider2.value + "%";
+            div2.style.width = slider2.value + "%";
+        }
+
+        window.onload = function () {
+            moveDiv2();
+        };
+
+        var divisor = document.getElementById("divisor"),
+            handle = document.getElementById("handle"),
+            slider = document.getElementById("slider");
+
+        function moveDivisor() {
+            handle.style.left = slider.value + "%";
+            divisor.style.width = slider.value + "%";
+        }
+
+        window.onload = function () {
+            moveDivisor();
+        };
     </script>
 
-    <script>
-        /*Execute a function that will execute an image compare function for each element with the img-comp-overlay class:*/
-        initComparisons();
-    </script>
-    <script>
-        (function ($) {
-            $.fn.countTo = function (options) {
-                options = options || {};
-
-                return $(this).each(function () {
-                    // set options for current element
-                    var settings = $.extend(
-                        {},
-                        $.fn.countTo.defaults,
-                        {
-                            from: $(this).data("from"),
-                            to: $(this).data("to"),
-                            speed: $(this).data("speed"),
-                            refreshInterval: $(this).data("refresh-interval"),
-                            decimals: $(this).data("decimals")
-                        },
-                        options
-                    );
-
-                    // how many times to update the value, and how much to increment the value on each update
-                    var loops = Math.ceil(settings.speed / settings.refreshInterval),
-                        increment = (settings.to - settings.from) / loops;
-
-                    // references & variables that will change with each update
-                    var self = this,
-                        $self = $(this),
-                        loopCount = 0,
-                        value = settings.from,
-                        data = $self.data("countTo") || {};
-
-                    $self.data("countTo", data);
-
-                    // if an existing interval can be found, clear it first
-                    if (data.interval) {
-                        clearInterval(data.interval);
-                    }
-                    data.interval = setInterval(updateTimer, settings.refreshInterval);
-
-                    // initialize the element with the starting value
-                    render(value);
-
-                    function updateTimer() {
-                        value += increment;
-                        loopCount++;
-
-                        render(value);
-
-                        if (typeof settings.onUpdate == "function") {
-                            settings.onUpdate.call(self, value);
-                        }
-
-                        if (loopCount >= loops) {
-                            // remove the interval
-                            $self.removeData("countTo");
-                            clearInterval(data.interval);
-                            value = settings.to;
-
-                            if (typeof settings.onComplete == "function") {
-                                settings.onComplete.call(self, value);
-                            }
-                        }
-                    }
-
-                    function render(value) {
-                        var formattedValue = settings.formatter.call(self, value, settings);
-                        $self.html(formattedValue);
-                    }
-                });
-            };
-
-            $.fn.countTo.defaults = {
-                from: 0, // the number the element should start at
-                to: 0, // the number the element should end at
-                speed: 1000, // how long it should take to count between the target numbers
-                refreshInterval: 100, // how often the element should be updated
-                decimals: 0, // the number of decimal places to show
-                formatter: formatter, // handler for formatting the value before rendering
-                onUpdate: null, // callback method for every time the element is updated
-                onComplete: null // callback method for when the element finishes updating
-            };
-
-            function formatter(value, settings) {
-                return value.toFixed(settings.decimals);
-            }
-        })(jQuery);
-
-        jQuery(function ($) {
-            // custom formatting example
-            $(".count-number").data("countToOptions", {
-                formatter: function (value, options) {
-                    return value
-                        .toFixed(options.decimals)
-                        .replace(/\B(?=(?:\d{3})+(?!\d))/g, ",");
-                }
-            });
-
-            // start all the timers
-            $(".timer").each(count);
-
-            function count(options) {
-                var $this = $(this);
-                options = $.extend({}, options || {}, $this.data("countToOptions") || {});
-                $this.countTo(options);
-            }
-        });
-
-    </script>
 
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/include-html.min.js"></script>
