--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <div class="sec-blog-1">
                                 <img class="w-100" src="images/blog-4.png" alt="">
                                 <div class="sec-bgg-bl">
-                                    <h5 class="sec-soft-hb">Power Wash Exterior Surface</h5>
+                                    <h5 class="sec-soft-hb">Minor Home Repairs Done Right</h5>
                                     <p class="sec-blobb">Lorem Ipsum is simply dummy text of the printing and
                                         typesetting industry. Lorem
                                         Ipsum has been the industry's.</p>
@@ -238,27 +238,27 @@
             <h4 class="sec-gall-main-n">We'll Restore Your Property<br>
                 In Just One Day</h4>
             <div class="row m-0">
-                <div class="col-lg-4 pb-4">
+                <div class="col-lg-4 py-4">
                     <div id="comparison">
-                        <figure>
+                        <figure class="figu-1">
                             <div id="handle"></div>
                             <div id="divisor"></div>
                         </figure>
                         <input type="range" min="0" max="100" value="50" id="slider" oninput="moveDivisor()">
                     </div>
                 </div>
-                <div class="col-lg-4 pb-4">
+                <div class="col-lg-4 py-4">
                     <div id="comparison">
-                        <figure>
+                        <figure class="figu-2">
                             <div id="han2"></div>
                             <div id="div2"></div>
                         </figure>
                         <input type="range" min="0" max="100" value="50" id="slider2" oninput="moveDiv2()">
                     </div>
                 </div>
-                <div class="col-lg-4 pb-4">
+                <div class="col-lg-4 py-4">
                     <div id="comparison">
-                        <figure>
+                        <figure class="figu-3">
                             <div id="han3"></div>
                             <div id="div3"></div>
                         </figure>
