--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
             </div>
         </div>
     </div>
-    
+
     <!-- rivew -->
     <div class="container-fluid sec-recv-padd">
         <div class="sec-space-left-right">
@@ -418,7 +418,7 @@
                     <div class="secvie-bgg">
                         <div class="text-center">
                             <div class="sec-img-vv">
-                                <img class="" src="images/v-1.png" alt="">
+                                <img class="" src="images/v-4.png" alt="">
                             </div>
                             <h4 class="sec-main-pp-v">Ashley Murphy</h4>
                             <p class="sec-main-n-p">Home Inspectors</p>
@@ -437,7 +437,7 @@
                     <div class="secvie-bgg">
                         <div class="text-center">
                             <div class="sec-img-vv">
-                                <img class="" src="images/v-2.png" alt="">
+                                <img class="" src="images/v-4.png" alt="">
                             </div>
                             <h4 class="sec-main-pp-v">Carol</h4>
                             <p class="sec-main-n-p">Self Employed</p>
@@ -459,13 +459,18 @@
                     <div class="secvie-bgg">
                         <div class="text-center">
                             <div class="sec-img-vv">
-                                <img class="" src="images/v-3.png" alt="">
+                                <img class="" src="images/v-4.png" alt="">
                             </div>
-                            <h4 class="sec-main-pp-v">Courtney Henry</h4>
+                            <h4 class="sec-main-pp-v">Dr. Fakhoury</h4>
                             <p class="sec-main-n-p">Nursing Assistant</p>
-                            <p class="sec-vew-pp-d">Aliqua id fugiat nostrud irure ex duis ea quis quis ad et. Sunt qui
-                                esse pariatur duis
-                                deserunt mollit dolore cillum minim tempor enim.</p>
+                            <p class="sec-vew-pp-d">I've known Jerry for many years, and he's done many jobs at our home
+                                as well as our business. Jerry has always been prompt, courteous, and professional when showing up at the job. He
+                                goes the extra mile to make sure that the customer is happy and well satisfied.
+
+
+
+                                I appreciate Jerry for his professionalism and passion in doing a great job and taking
+                                care of his customers. </p>
                             <img class="w-100" src="images/star-2.png" alt="">
                         </div>
                     </div>
