--- a/index.html
+++ b/index.html
@@ -61,7 +61,54 @@
                     cleaning needs</h3>
 
                 <div class="sec-btn">
-                    <a class="sec-btn22" href="#">Book Now</a>
+                     <!-- Button trigger modal -->
+                <button type="button" class="btn sec-btn22" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Book Now
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">REQUEST A CALL BACK 24/7
+                                </h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <form id="sec-pop-fo">
+                                    <div class="row m-0">
+                                        <div class="col-lg-12 sec-fo-p">
+                                            <input type="text" class="form-control" placeholder="Full name" required>
+                                        </div>
+                                        <div class="col-lg-6 sec-fo-p">
+                                            <input type="email" class="form-control" placeholder="*Email" required>
+                                        </div>
+                                        <div class="col-lg-6 sec-fo-p">
+                                            <input type="number" class="form-control" placeholder="*Phone Number"
+                                                required>
+                                        </div>
+                                        <div class="col-lg-12 sec-fo-p">
+                                            <select id="inputState" class="form-control" required>
+                                                <option selected>Water Damage Restoration</option>
+                                                <option>...</option>
+                                            </select>
+                                        </div>
+                                        <div class="col-lg-12 sec-fo-p">
+                                            <textarea class="form-control form-control-sm mb-3" rows="3"
+                                                placeholder="What can we help you with? (ex: flooded basement)"></textarea>
+                                        </div>
+                                        <div class="col-lg-12 sec-fo-p">
+                                            <button type="submit" class="btn sec-btn22">GET HELP NOW!</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 </div>
             </div>
         </div>
